edit of container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav class="navbar">
         <div class=" nav-title">COUNTRY FINDER</div>
         <div class="wrapper">
+            <div class="container"></div>
             <h1></h1>
         </div>
         
