--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <link rel="stylesheet" href="background style.css">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +12,14 @@
     <nav class="navbar">
         <div class=" nav-title">COUNTRY FINDER</div>
         <div class="wrapper">
-            <div class="container"></div>
-            <h1></h1>
+            <div class="container">
+                <div class= "search-wrapper">
+                    <input type= "text" id="country-inp"
+                    placeholder= "Enter country name here ..."
+                    />
+                    <button id ="search-btn">search</button>
+
+            </div>
         </div>
         
 
@@ -29,6 +34,6 @@
         </div>
     </nav>
 
-    
+<script src="./index.js"></script>  
 </body>
 </html>
